新增redis cache支持